deleteメソッドにデータが渡されません。

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ li {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 30;
 }
 
 .modal__bg {
@@ -99,6 +100,7 @@ li {
   height: 100vh;
   position: absolute;
   width: 100%;
+  z-index: 1;
 }
 
 .modal__content {
